# BUPT_CustomClient_26

./: .gitignore  CMakeLists.txt  log_bridge.cpp  log_bridge.h  log_manager.cpp  log_manager.h  main.cpp  mainwindow.h  rm_client.cpp  rm_client.h  rm_protocol.proto  tmp  types.h
cmake-mqtt-test/: CMakeCache.txt
network/: rm_receiver.cpp  rm_receiver.h  rm_sender.cpp  rm_sender.h
qtmqtt/: .gitignore
qtmqtt/examples/mqtt/websocketsubscription/: clientsubscription.cpp
tests/: auto_tests.cpp
ui/: command_console_widget.cpp  command_console_widget.h  connection_status_widget.h  dashboard_widget.cpp  dashboard_widget.h  map_widget.h  robot_status_widget.h
ui/full/: connection_status_widget.cpp  dashboard_widget.h  mainwindow.cpp  mainwindow.h  map_widget.cpp  robot_status_widget.cpp  robot_status_widget.h
ui/user/: mainwindow.cpp  mainwindow.h  user.qrc  web_bridge.cpp  web_bridge.h
ui/user/assets/: overlay.html
video/: video_decoder.cpp  video_decoder.h  video_widget.cpp  video_widget.h
